--- a/untitled.html
+++ b/untitled.html
@@ -36,13 +36,13 @@
         <h1 class="h-primary center">Something about each of us</h1>
         <div id="services">
             <div class="box">
-                <img src="C:\Users\Anurita\html documents\folder\12.jpg" alt="">
+                <img src="./12.jpg" alt="">
                 <h2 class="h-secondary center">Deepsikha</h2>
                 <p class="center">Well,not much to say .She is a young 18 year old girl with a heart which is crystal clear.She is labourious,charming,not so beautiful yet always loves truely.She is sometimes fooled by many.She is happy to get her love and wishes to spend her life with him.She is attractive,kind and calm.
                 </p>
             </div>
             <div class="box">
-                <img src="C:\Users\Anurita\html documents\folder\500028300489_88308.jpg" alt="">
+                <img src="./500028300489_88308.jpg" alt="">
                 <h2 class="h-secondary center">Naveen</h2>
                 <p class="center"> He is a handsome, 19 years old young gentleboy full of lively spirits.He is the who is well matured and quite responsible.He dreams of becoming an IAS officer and he has all the well wishes and blessings of his near and dear ones.He sometimes gets frustrated if his daily routine dont work properly but he finds all the solutions from his lovely girlfriend.He is a precious gem to be found and preserved by anyone</p></div>
             <!--<div class="box">
